--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -13,7 +13,7 @@
 <p style="text-align: justify; ">Namun, berkat produk ikonik mereka, yaitu "Es Kopi Susu Tetangga", Tuku dengan cepat mendapatkan perhatian masyarakat. Es Kopi Susu ini menjadi populer karena rasanya yang unik dan harganya yang terjangkau, menjadikannya minuman favorit bagi berbagai kalangan, mulai dari mahasiswa hingga pekerja kantoran. Ketenaran Toko Kopi Tuku semakin melonjak ketika Presiden Joko Widodo terlihat membeli kopi di sana, membawa kedai kopi ini ke panggung nasional. Sejak saat itu, Tuku terus berkembang dengan membuka beberapa cabang di sekitar Jakarta, tetap mempertahankan konsep toko kecil dengan atmosfer ramah dan sederhana. Mereka berfokus pada penyajian kopi lokal dengan bahan-bahan yang sebagian besar didapatkan dari petani kopi Indonesia. Meski semakin populer, Toko Kopi Tuku tetap memegang teguh prinsip mereka untuk mendukung industri kopi lokal dan memberikan pengalaman kopi berkualitas tanpa embel-embel mewah. Mereka berhasil membangun loyalitas pelanggan melalui pendekatan yang fokus pada rasa kopi dan kesederhanaan, menjadikan Tuku sebagai pionir dalam tren kedai kopi lokal di Indonesia.</p>
 <h2 style="text-align: center; background-color: #4a4839; color: floralwhite;"> Favorit Tetangga Tuku </h2>
 <dl>
-	<dt><li><strong> Kopii Susu Tetangga:<strong></dt>
+	<dt><li><strong> Kopi Susu Tetangga:<strong></dt>
 	<dd><i>Espresso + Milk + Creamer + Arenga Sugar</i></dd> 
 	<dt><img src="/images/kst.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
