--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -27,7 +27,7 @@
 <dl>
 	<dt><li><strong> Donat Kampoeng:<strong></dt>
 	<dd><i>Donat Kampoeng yang dibaluri gula putih</i></dd> 
-	<dt><img src="/images/Donat.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="Donat.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
 	<dt><li><strong> Bolu Cokelat:<strong></dt>
 	<dd><i>Bolu Cokelat lembut favorit Tetangga Tuku! Cocok dinikmati bareng kopi hitam</i></dd> 
