--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -111,7 +111,7 @@
 </ol>
 <table>
 	<tr>
-		<td><img src="/images/cipete.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
+		<td><img src="./images/cipete.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
 		<td><img src="/images/blokm.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
 		<td><img src="/images/pajajaran.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
 		<td><img src="/images/gbk.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
