--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -112,10 +112,10 @@
 <table>
 	<tr>
 		<td><img src="./images/cipete.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
-		<td><img src="/images/blokm.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
-		<td><img src="/images/pajajaran.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
-		<td><img src="/images/gbk.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
-		<td><img src="/images/pamulang.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
+		<td><img src="./images/blokm.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
+		<td><img src="./images/pajajaran.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
+		<td><img src="./images/gbk.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
+		<td><img src="./images/pamulang.jpg" style="width: 150px; height: 170px ; border-radius: 5px;"><td>
 	</tr>
 </table>
 <hr>
