--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -37,8 +37,8 @@
 </table>
 <table style="width: 100%;">
   <tr>
-    <td style="width: 50%; text-align: center; vertical-align: middle;"><img src="/latihan3/images/menu1.jpg" style="width: 200px; height: 230px; border-radius: 5px;"></td>
-    <td style="width: 50%; text-align: center; vertical-align: middle;"><img src="/latihan3/images/menu2.jpg" style="width: 200px; height: 230px; border-radius: 5px;"><td>
+    <td style="width: 50%; text-align: center; vertical-align: middle;"><img src="./images/menu1.jpg" style="width: 200px; height: 230px; border-radius: 5px;"></td>
+    <td style="width: 50%; text-align: center; vertical-align: middle;"><img src="./images/menu2.jpg" style="width: 200px; height: 230px; border-radius: 5px;"><td>
     </td>
   </tr>
 </table>
