--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tuku</title>
-	<link rel="icon" type="images/x-icon" href="/latihan3/images/tuku.jpg"
+	<link rel="icon" type="images/x-icon" href="./images/tuku.jpg"
 <head>
 <body bgcolor="#f9f2b9">
 <h1 style= "text-align: center; background-color: #d2cd9c; color: #2e2b19; background-repeat: no-repeat;background-size: cover;">TUKU<br>Berawal Dari Warga, Berakhir Jadi Tetangga</h1>
