--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -9,29 +9,29 @@
 <body bgcolor="#f9f2b9">
 <h1 style= "text-align: center; background-color: #d2cd9c; color: #2e2b19; background-repeat: no-repeat;background-size: cover;">TUKU<br>Berawal Dari Warga, Berakhir Jadi Tetangga</h1>
 <h2 style="text-align: center; background-color: #4a4839; color: floralwhite;">Halo, Tetangga Tuku!</h2>
-<p style="text-align: justify;"><img src="/latihan3/images/tukuww.jpg" style="float: left;width: 250px; height: 260px; margin:5px; border-radius: 10px;"><b>TOKO KOPI TUKU<b> didirikan pada tahun 2015 oleh Andanu Prasetyo, seorang pengusaha muda yang ingin memperkenalkan kopi berkualitas dengan harga terjangkau kepada masyarakat Indonesia. Inspirasi pendirian Toko Kopi Tuku muncul dari kecintaannya terhadap kopi dan keinginannya untuk mendemokratisasi akses terhadap kopi lokal yang berkualitas. Berbeda dengan kedai kopi internasional yang menjual kopi dengan harga tinggi, Tuku hadir sebagai alternatif lokal yang menyajikan kopi khas Indonesia dengan cita rasa otentik. Kedai pertama Tuku dibuka di daerah Cipete, Jakarta Selatan, dengan konsep sederhana dan ukuran yang tidak terlalu besar. </p>
+<p style="text-align: justify;"><img src="./images/tukuww.jpg" style="float: left;width: 250px; height: 260px; margin:5px; border-radius: 10px;"><b>TOKO KOPI TUKU<b> didirikan pada tahun 2015 oleh Andanu Prasetyo, seorang pengusaha muda yang ingin memperkenalkan kopi berkualitas dengan harga terjangkau kepada masyarakat Indonesia. Inspirasi pendirian Toko Kopi Tuku muncul dari kecintaannya terhadap kopi dan keinginannya untuk mendemokratisasi akses terhadap kopi lokal yang berkualitas. Berbeda dengan kedai kopi internasional yang menjual kopi dengan harga tinggi, Tuku hadir sebagai alternatif lokal yang menyajikan kopi khas Indonesia dengan cita rasa otentik. Kedai pertama Tuku dibuka di daerah Cipete, Jakarta Selatan, dengan konsep sederhana dan ukuran yang tidak terlalu besar. </p>
 <p style="text-align: justify; ">Namun, berkat produk ikonik mereka, yaitu "Es Kopi Susu Tetangga", Tuku dengan cepat mendapatkan perhatian masyarakat. Es Kopi Susu ini menjadi populer karena rasanya yang unik dan harganya yang terjangkau, menjadikannya minuman favorit bagi berbagai kalangan, mulai dari mahasiswa hingga pekerja kantoran. Ketenaran Toko Kopi Tuku semakin melonjak ketika Presiden Joko Widodo terlihat membeli kopi di sana, membawa kedai kopi ini ke panggung nasional. Sejak saat itu, Tuku terus berkembang dengan membuka beberapa cabang di sekitar Jakarta, tetap mempertahankan konsep toko kecil dengan atmosfer ramah dan sederhana. Mereka berfokus pada penyajian kopi lokal dengan bahan-bahan yang sebagian besar didapatkan dari petani kopi Indonesia. Meski semakin populer, Toko Kopi Tuku tetap memegang teguh prinsip mereka untuk mendukung industri kopi lokal dan memberikan pengalaman kopi berkualitas tanpa embel-embel mewah. Mereka berhasil membangun loyalitas pelanggan melalui pendekatan yang fokus pada rasa kopi dan kesederhanaan, menjadikan Tuku sebagai pionir dalam tren kedai kopi lokal di Indonesia.</p>
 <h2 style="text-align: center; background-color: #4a4839; color: floralwhite;"> Favorit Tetangga Tuku </h2>
 <dl>
 	<dt><li><strong> Kopi Susu Tetangga:<strong></dt>
 	<dd><i>Espresso + Milk + Creamer + Arenga Sugar</i></dd> 
-	<dt><img src="/images/kst.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="./images/kst.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
 	<dt><li><strong> Earl Grey Milk Tea:<strong></dt>
 	<dd><i>Earl Grey Tea + Milk + Milk Tea Powder + Creamer</i></dd> 
-	<dt><img src="/images/earlgrey.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="./images/earlgrey.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
 	<dt><li><strong> Chocolate:<strong></dt>
 	<dd><i>Chocolate + Milk + Sugar</i></dd> 
-	<dt><img src="/images/Chocolate.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="./images/Chocolate.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
 	<dt><li><strong> Donat Kampoeng:<strong></dt>
 	<dd><i>Donat Kampoeng yang dibaluri gula putih</i></dd> 
-	<dt><img src="Donat.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="./images/Donat.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
 	<dt><li><strong> Bolu Cokelat:<strong></dt>
 	<dd><i>Bolu Cokelat lembut favorit Tetangga Tuku! Cocok dinikmati bareng kopi hitam</i></dd> 
-	<dt><img src="/images/Bolu.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="./images/Bolu.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 </dl>
 <h2 style="text-align: center; background-color: #4a4839; color: floralwhite;"> Lini Produk Toko Kopi Tuku </h2>
 </table>
