--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -23,15 +23,15 @@
 <dl>
 	<dt><li><strong> Chocolate:<strong></dt>
 	<dd><i>Chocolate + Milk + Sugar</i></dd> 
-	<dt><img src="./images/Chocolate.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src=".images/chocolate.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
 	<dt><li><strong> Donat Kampoeng:<strong></dt>
 	<dd><i>Donat Kampoeng yang dibaluri gula putih</i></dd> 
-	<dt><img src="./images/Donat.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="./images/donat.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
 	<dt><li><strong> Bolu Cokelat:<strong></dt>
 	<dd><i>Bolu Cokelat lembut favorit Tetangga Tuku! Cocok dinikmati bareng kopi hitam</i></dd> 
-	<dt><img src="./images/Bolu.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="./images/bolu.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 </dl>
 <h2 style="text-align: center; background-color: #4a4839; color: floralwhite;"> Lini Produk Toko Kopi Tuku </h2>
 </table>
