--- a/latihan3/latihan3.html
+++ b/latihan3/latihan3.html
@@ -23,7 +23,7 @@
 <dl>
 	<dt><li><strong> Chocolate:<strong></dt>
 	<dd><i>Chocolate + Milk + Sugar</i></dd> 
-	<dt><img src=".images/chocolate.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
+	<dt><img src="./images/chocolate.jpg" style="=width: 150px; height: 150px; border-radius: 5px;"></dt>
 <dl>
 	<dt><li><strong> Donat Kampoeng:<strong></dt>
 	<dd><i>Donat Kampoeng yang dibaluri gula putih</i></dd> 
