--- a/latihan4/latihan4.html
+++ b/latihan4/latihan4.html
@@ -8,7 +8,7 @@
 </head>
 <body bgcolor="white">
 <h1 style= "text-align: center; background-color: black; color: white; background-repeat: no-repeat;background-size: cover;">OATSIDE<br>🌾Susu Oat Milk 🥛</h1>
-<p style="text-align: justify; font-size: 20px;font-family: comic sans ms; padding-top: 5px; background-repeat: no-repeat; background-size: cover; color: black ;"><img src="./images/gambarr.png" style="float: left; width: 300px; height: 220px; padding-bottom: 20px; margin: 20px; border-radius:10px;"><b>Oatside</b> <br>Oatside adalah inovasi dalam dunia produk berbasis oat yang menawarkan alternatif sehat dan lezat bagi konsumen yang peduli akan kesehatan. Dengan mengedepankan kualitas bahan baku yang alami, Oatside menyajikan berbagai pilihan produk seperti susu oat, yogurt, dan camilan berbasis oat yang kaya serat dan nutrisi. Produk ini tidak hanya ramah lingkungan, tetapi juga bebas dari bahan pengawet dan tambahan gula berlebih, sehingga cocok untuk semua kalangan, termasuk vegan dan mereka yang intoleran laktosa. Dengan cita rasa yang creamy dan menyegarkan, Oatside menjadi pilihan ideal untuk sarapan sehat atau sebagai snack bergizi kapan saja. Dengan menghadirkan produk yang memenuhi kebutuhan gizi modern, Oatside mengajak konsumen untuk berkontribusi dalam gaya hidup lebih sehat dan lebih berkelanjutan.<br></p>
+<p style="text-align: justify; font-size: 20px;font-family: comic sans ms; padding-top: 5px; background-repeat: no-repeat; background-size: cover; color: black ;"><img src="./images/gambarr.jpg" style="float: left; width: 300px; height: 220px; padding-bottom: 20px; margin: 20px; border-radius:10px;"><b>Oatside</b> <br>Oatside adalah inovasi dalam dunia produk berbasis oat yang menawarkan alternatif sehat dan lezat bagi konsumen yang peduli akan kesehatan. Dengan mengedepankan kualitas bahan baku yang alami, Oatside menyajikan berbagai pilihan produk seperti susu oat, yogurt, dan camilan berbasis oat yang kaya serat dan nutrisi. Produk ini tidak hanya ramah lingkungan, tetapi juga bebas dari bahan pengawet dan tambahan gula berlebih, sehingga cocok untuk semua kalangan, termasuk vegan dan mereka yang intoleran laktosa. Dengan cita rasa yang creamy dan menyegarkan, Oatside menjadi pilihan ideal untuk sarapan sehat atau sebagai snack bergizi kapan saja. Dengan menghadirkan produk yang memenuhi kebutuhan gizi modern, Oatside mengajak konsumen untuk berkontribusi dalam gaya hidup lebih sehat dan lebih berkelanjutan.<br></p>
 <hr>
 <h1 style="text-align: center; color:#73c345; padding: 10px; font-family: comic sans ms;"> Our Oat Milk </h1>
 <table border="3" cellpadding="6" cellspacing="6" style="color:#fff634 ; float: left;margin-right: 200px; font-family: comic sans ms;">
@@ -25,7 +25,7 @@
 		<td style="text-align: center;">1. </td>
 		<td>Oatside Milk Rasa Chocolate (200ml)</td>
 		<td>7.500</td>
-		<td><img src="/latihan/latihan4/images/coklat.jpg" style="width: 70px"></td>
+		<td><img src="./images/coklat.jpg" style="width: 70px"></td>
 	</tr>
 	<tr>
 		<td style="text-align: center;">2. </td>
