--- a/latihan4/latihan4.html
+++ b/latihan4/latihan4.html
@@ -120,12 +120,12 @@
 </style><br>
 <table style="width: 100%; text-align: center;">
 	<tr>
-		<td><img src="/latihan/latihan4/images/resep1.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
-		<td><img src="/latihan/latihan4/images/resep2.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
-		<td><img src="/latihan/latihan4/images/resep3.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
-		<td><img src="/latihan/latihan4/images/resep4.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
-		<td><img src="/latihan/latihan4/images/resep5.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
-		<td><img src="/latihan/latihan4/images/resep6.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
+		<td><img src="./images/resep1.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
+		<td><img src="./images/resep2.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
+		<td><img src="./images/resep3.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
+		<td><img src="./images/resep4.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
+		<td><img src="./images/resep5.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
+		<td><img src="./images/resep6.jpg" style="width: 130px; height: 190px ; border-radius: 5px;"><td>
 	</tr>
 </table>
 <hr>
