--- a/latihan4/latihan4.html
+++ b/latihan4/latihan4.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Oatside</title>
-	<link rel="icon" type="images/x-icon" href="/latihan/latihan4/images/logo1.jpg"
+	<link rel="icon" type="images/x-icon" href="./images/logo1.jpg"
 </head>
 <body bgcolor="white">
 <h1 style= "text-align: center; background-color: black; color: white; background-repeat: no-repeat;background-size: cover;">OATSIDE<br>🌾Susu Oat Milk 🥛</h1>
