--- a/latihan4/latihan4.html
+++ b/latihan4/latihan4.html
@@ -31,19 +31,19 @@
 		<td style="text-align: center;">2. </td>
 		<td>Oatside Milk Rasa Barista Blend (200ml)</td>
 		<td>7.500</td>
-		<td><img src="/latihan/latihan4/images/blend.jpg" style="width: 70px"></td>
+		<td><img src="./images/blend.jpg" style="width: 70px"></td>
 	</tr>
 	<tr>
 		<td style="text-align: center;">3. </td>
 		<td>Oatside Milk Rasa Chocomalt (200ml)</td>
 		<td>7.500</td>
-		<td><img src="/latihan/latihan4/images/malt.jpg" style="width: 70px"></td>
+		<td><img src="./images/malt.jpg" style="width: 70px"></td>
 	</tr>
 	<tr>
 		<td style="text-align: center;">4. </td>
 		<td>Oatside Milk Rasa Coffee (200ml)</td>
 		<td>7.500</td>
-		<td><img src="/latihan/latihan4/images/kopi.jpg" style="width: 70px"></td>
+		<td><img src="./images/kopi.jpg" style="width: 70px"></td>
 	</tr>
 </table><br><br>
 <video autoplay loop muted width="500" height="240" controls>
