--- a/latihan5/latihan5.html
+++ b/latihan5/latihan5.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Fore Coffee</title>
 	<link rel="stylesheet" type="text/css" href="css1.css">
-	<link rel="icon" type="image/x-icon" href="/latihan/latihan5/images/logo.png">
+	<link rel="icon" type="image/x-icon" href="./images/logo.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
