--- a/latihan5/latihan5.html
+++ b/latihan5/latihan5.html
@@ -28,7 +28,7 @@
 
 <!--Banner-->
 <div class="banner" id="Home">
-	<img src="/latihan/latihan5/images/name.jpg">
+	<img src="./images/name.jpg">
 	<h1>Halo... <span></span><h1>
 	<p>Grind The  Essentials</p>
 
@@ -39,7 +39,7 @@
 <section class="about"> 
 	<div class="container">
 		<h2>About</h2>
-		<img src="/latihan/latihan5/images/gambar3.png">
+		<img src="./images/gambar3.png">
 		<p><strong>Selamat datang di website Fore Coffee</strong>, tempat terbaik untuk menikmati kopi berkualitas dengan sentuhan modern dan ramah lingkungan. Kami hadir untuk menemani setiap langkah Anda dalam mengeksplorasi kelezatan kopi yang terbuat dari biji pilihan, diracik dengan presisi oleh barista berpengalaman. Di Fore Coffee, kami tidak hanya mengutamakan rasa yang nikmat, tetapi juga memastikan pengalaman kopi Anda ramah lingkungan melalui inovasi dan penggunaan kemasan yang berkelanjutan. Temukan berbagai pilihan kopi yang siap dipesan kapan saja, di mana saja, dengan mudah melalui website kami!</p>
 	</div>
 </section>
@@ -54,37 +54,37 @@
         <tr>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/cafemalt.jpg" width="235px" height="240px" alt="Iced Café Malt Latte">
+                    <img src="./images/cafemalt.jpg" width="235px" height="240px" alt="Iced Café Malt Latte">
                     <p style="font-family: georgia; color: #3d1213 ;">Iced Café Malt Latte</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/classic.jpg" width="235px" height="240px" alt="Iced Classic Latte">
+                    <img src="./images/classic.jpg" width="235px" height="240px" alt="Iced Classic Latte">
                     <p style="font-family: georgia; color: #3d1213 ;">Iced Classic Latte</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/hot.jpg" width="235px" height="240px" alt="Hot Cappuccino">
+                    <img src="./images/hot.jpg" width="235px" height="240px" alt="Hot Cappuccino">
                     <p style="font-family: georgia; color: #3d1213 ;">Hot Capuccino</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/cafelatte.jpg" width="235px" height="240px" alt="Iced Café Latte">
+                    <img src="./images/cafelatte.jpg" width="235px" height="240px" alt="Iced Café Latte">
                     <p style="font-family: georgia; color: #3d1213 ;">Iced Café Latte</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/salted.jpg" width="235px" height="240px" alt="Iced Salted Caramel Mocha">
+                    <img src="./images/salted.jpg" width="235px" height="240px" alt="Iced Salted Caramel Mocha">
                     <p style="font-family: georgia; color: #3d1213">Iced Salted Caramel Mocha</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/nuttyoat.jpg" width="235px" height="240px" alt="Nutty Oat Latte">
+                    <img src="./images/nuttyoat.jpg" width="235px" height="240px" alt="Nutty Oat Latte">
                     <p style="font-family: georgia; color: #3d1213">Nutty Oat Latte</p>
                 </div>
             </td>
@@ -96,37 +96,37 @@
         <tr>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/hotcafe.jpg" width="235px" height="240px" alt="Hot Café Malt Latte">
+                    <img src="./images/hotcafe.jpg" width="235px" height="240px" alt="Hot Café Malt Latte">
                     <p style="font-family: georgia; color: #3d1213 ;">Hot Café Malt Latte</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/icedcapu.jpg" width="235px" height="240px" alt="Iced Cappuccino">
+                    <img src="./images/icedcapu.jpg" width="235px" height="240px" alt="Iced Cappuccino">
                     <p style="font-family: georgia; color: #3d1213 ;">Iced Cappuccino</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/shaken.jpg" width="235px" height="240px" alt="Double Iced Shaken Latte">
+                    <img src="./images/shaken.jpg" width="235px" height="240px" alt="Double Iced Shaken Latte">
                     <p style="font-family: georgia; color: #3d1213 ;">Double Iced Shaken Latte</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/hotcafe.jpg" width="235px" height="240px" alt="Hot Café Latte">
+                    <img src="./images/hotcafe.jpg" width="235px" height="240px" alt="Hot Café Latte">
                     <p style="font-family: georgia; color: #3d1213 ;">Hot Café Latte</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/salted.jpg" width="235px" height="240px" alt="Hot Salted Caramel Mocha">
+                    <img src="./images/salted.jpg" width="235px" height="240px" alt="Hot Salted Caramel Mocha">
                     <p style="font-family: georgia; color: #3d1213">Hot Salted Caramel Mocha</p>
                 </div>
             </td>
             <td align="center">
                 <div>
-                    <img src="/latihan/latihan5/images/hotespress.jpg" width="235px" height="240px" alt="Hot Espresso">
+                    <img src="./images/hotespress.jpg" width="235px" height="240px" alt="Hot Espresso">
                     <p style="font-family: georgia; color: #3d1213">Hot Espresso</p>
                 </div>
                 </td>
