--- a/latihan6/latihan6.html
+++ b/latihan6/latihan6.html
@@ -23,7 +23,7 @@
 <br id="Home"><br><br>
  <section class="home">
  	<div class="home-img">
- 		<img src="/latihan/latihan6/images/gambar1.jpg" alt="">
+ 		<img src="./images/gambar1.jpg" alt="">
  	</div>
  	<div class="home-content">
  		<h1><strong>Welcome To <span>Fore Coffee</span></strong></h1>
