--- a/latihan6/latihan6.html
+++ b/latihan6/latihan6.html
@@ -43,7 +43,7 @@
  <section class="about">
  	<h2>About</h2>
  	<div class="container">
- 		<img src="/latihan/latihan6/images/gambar2.jpg" style="float: left; width: 195px; height: 240px; margin: 20px; border-radius: 10px;">
+ 		<img src="./images/gambar2.jpg" style="float: left; width: 195px; height: 240px; margin: 20px; border-radius: 10px;">
  		<p><b>Fore Coffee</b> adalah jaringan kedai kopi yang berdiri sejak 2018 di Indonesia, dengan fokus pada penyajian kopi berkualitas untuk masyarakat urban. Dengan tagline "Grind The Essentials," Fore Coffee mengedepankan cita rasa kopi yang autentik dan bahan baku pilihan untuk menyajikan minuman berkualitas tinggi. Kopi yang disajikan terbuat dari biji kopi lokal yang diproses dengan standar tinggi, menjaga keunikan rasa dalam setiap cangkirnya.</p>
  		<p>Fore Coffee juga mengutamakan kemudahan akses bagi pelanggan. Selain kedai fisik, mereka menawarkan pemesanan melalui aplikasi dan platform digital, memungkinkan pelanggan untuk memesan kopi dengan cepat dan praktis. Dengan pilihan rasa yang beragam, Fore Coffee terus berinovasi untuk menyesuaikan selera konsumen lokal dan internasional, menghadirkan varian kopi klasik hingga rasa yang lebih eksperimental.</p>
  		<p>Di samping penyajian kopi, Fore Coffee juga berkomitmen pada keberlanjutan dan dukungan terhadap petani kopi lokal. Mereka bekerja sama dengan perkebunan kopi di Indonesia untuk memastikan proses yang etis dan ramah lingkungan. Dengan langkah ini, Fore Coffee tidak hanya memperluas jaringan pelanggan tetapi juga memberikan dampak positif bagi komunitas lokal.</p>
@@ -55,84 +55,84 @@
  	<h2>Beverage</h2>
  	<div class="card-container">
  		<div class="card">
- 			<img src="/latihan/latihan5/images/cafemalt.jpg">
+ 			<img src="./images/cafemalt.jpg">
  			<div class="card-content">
  			<h1><strong>Iced Café Malt Latte</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/classic.jpg">
+ 			<img src="./images/classic.jpg">
  			<div class="card-content">
  			<h1><strong>Iced Classic Latte</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/hot.jpg">
+ 			<img src="./images/hot.jpg">
  			<div class="card-content">
  			<h1><strong>Hot Cappuccino</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/cafelatte.jpg">
+ 			<img src="./images/cafelatte.jpg">
  			<div class="card-content">
  			<h1><strong>Iced Café Latte</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/salted.jpg">
+ 			<img src="./images/salted.jpg">
  			<div class="card-content">
  			<h1><strong>Iced Salted Caramel Mocha</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/nuttyoat.jpg">
+ 			<img src="./images/nuttyoat.jpg">
  			<div class="card-content">
  			<h1><strong>Nutty Oat Latte</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/hotcafe.jpg">
+ 			<img src="./images/hotcafe.jpg">
  			<div class="card-content">
  			<h1><strong>Hot Café Malt Latte</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/icedcapu.jpg">
+ 			<img src="./images/icedcapu.jpg">
  			<div class="card-content">
  			<h1><strong>Iced Cappuccino</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/shaken.jpg">
+ 			<img src="./images/shaken.jpg">
  			<div class="card-content">
  			<h1><strong>Double Iced Shaken Latte</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/hotcafe.jpg">
+ 			<img src="./images/hotcafe.jpg">
  			<div class="card-content">
  			<h1><strong>Hot Café Latte</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/hotcafe.jpg">
+ 			<img src="./images/hotcafe.jpg">
  			<div class="card-content">
  			<h1><strong>Hot Salted Caramel Mocha</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
  		</div>
  	</div>
  		<div class="card">
- 			<img src="/latihan/latihan5/images/hotespress.jpg">
+ 			<img src="./images/hotespress.jpg">
  			<div class="card-content">
  			<h1><strong>Hot Espresso</strong></h1>
  			<a href="https://fore.coffee/id/" class="card-button">Read More</a>
