--- a/latihan6/latihan6.html
+++ b/latihan6/latihan6.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css1.css">
 	<title>Fore Coffee</title>
-	<link rel="icon" type="image/x-icon" href="latihan5/images/logo.ico">
+	<link rel="icon" type="image/x-icon" href="./images/logo.png">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
 </head>
 
