--- a/latihan6/latihan6.html
+++ b/latihan6/latihan6.html
@@ -169,6 +169,33 @@
 	</div>
  </section>
 
+<div class="table">
+ <h1>Our Location</h1>
+ <table>
+    <tr>
+        <td><b>Alternative Cibubur</b> Fore Coffee - Jl. Raya Cibubur, Kel. Harjamukti, Kec. Cimanggis, Kota Depok </td>
+        <td>07:00 - 23:00</td>
+    </tr>
+    <tr>
+        <td><b>Anggrek Cakra</b> Fore Coffee - Jl. Anggrek Cakra No 20, Kebon Jeruk, Jakarta Barat </td>
+        <td>07:00 - 21:00</td>
+    </tr>
+    <tr>
+        <td><b>Araya Plaza</b> Fore Coffee - Jl. Blimbing Indah Megah No.2, Purwodadi, Kec. Blimbing, Kota Malang, Jawa Timur 65126 </td>
+        <td>07:00 - 22:00</td>
+    </tr>
+    <tr>
+        <td><b>Baloi Batam</b> Fore Coffee - Jl. Pembangunan Blok A No. 2,3,4, Batu Selicin, Kec. Lubuk Baja, Kota Batam, Kepulauan Riau 29444 </td>
+        <td>07:00 - 23:00</td>
+    </tr>
+    <tr>
+        <td><b>Bandung Indah Plaza</b> Fore Coffee - Jl. Merdeka No.56, Citarum, Kec. Bandung Wetan, Kota Bandung, Jawa Barat 40115 (Lantai GF samping Starbucks) </td>
+        <td>09:00 - 22:00</td>
+    </tr>
+    </table>
+    </div>
+    </section>
+
  <div class="footer">
  	<p>&copy; 2024 Designed By Aprilia Wijaya Rambey</p>
  </div>
